// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserProfile Снапшот с рутом на авторизацию 1`] = `
<div>
  <a
    class="link"
    href="/authorization"
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 21.9999L3.79 19.1199C6.4 9.6199 17.6 9.6199 20.21 19.1199L21 21.9999"
        stroke="#151515"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.5"
      />
      <path
        d="M12 11.98C14.7614 11.98 17 9.74141 17 6.97998C17 4.21856 14.7614 1.97998 12 1.97998C9.23858 1.97998 7 4.21856 7 6.97998C7 9.74141 9.23858 11.98 12 11.98Z"
        stroke="#151515"
        stroke-linecap="round"
        stroke-linejoin="bevel"
        stroke-width="2.5"
      />
    </svg>
  </a>
</div>
`;

exports[`UserProfile Снапшот с рутом на профиль 1`] = `
<div>
  <a
    class="link"
    href="/user/profile"
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 21.9999L3.79 19.1199C6.4 9.6199 17.6 9.6199 20.21 19.1199L21 21.9999"
        stroke="#151515"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2.5"
      />
      <path
        d="M12 11.98C14.7614 11.98 17 9.74141 17 6.97998C17 4.21856 14.7614 1.97998 12 1.97998C9.23858 1.97998 7 4.21856 7 6.97998C7 9.74141 9.23858 11.98 12 11.98Z"
        stroke="#151515"
        stroke-linecap="round"
        stroke-linejoin="bevel"
        stroke-width="2.5"
      />
    </svg>
  </a>
</div>
`;
